--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+<!-- Image borrowed from https://www.theodysseyonline.com/coffee-day-keeps-doctor-away -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/pad"
-        android:text="@string/quan"
-        android:textAllCaps="true"
-        android:textSize="@dimen/text" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/image"
+        android:scaleType="centerCrop"
+        android:src="@drawable/coffee_image" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/decrement_button"
-            android:layout_width="@dimen/but_size"
-            android:layout_height="@dimen/but_size"
-            android:layout_margin="@dimen/pad"
-            android:onClick="decrement"
-            android:text="@string/sub" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
         <TextView
-            android:id="@+id/quantity_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/pad"
-            android:text="@string/quan_display"
+            android:padding="@dimen/pad"
+            android:text="@string/quan"
+            android:textAllCaps="true"
+            android:textColor="@color/chocolate"
+            android:textSize="@dimen/text" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/decrement_button"
+                android:layout_width="@dimen/but_size"
+                android:layout_height="@dimen/but_size"
+                android:layout_margin="@dimen/pad"
+                android:background="@color/buttonAlmond"
+                android:onClick="decrement"
+                android:text="@string/sub"
+                android:textSize="@dimen/text" />
+
+            <TextView
+                android:id="@+id/quantity_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/pad"
+                android:text="@string/quan_display"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text" />
+
+            <Button
+                android:id="@+id/increment_button"
+                android:layout_width="@dimen/but_size"
+                android:layout_height="@dimen/but_size"
+                android:layout_margin="@dimen/pad"
+                android:background="@color/buttonAlmond"
+                android:onClick="increment"
+                android:text="@string/add"
+                android:textSize="@dimen/text" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/pad"
+            android:text="@string/price"
+            android:textAllCaps="true"
+            android:textColor="@color/chocolate"
+            android:textSize="@dimen/text" />
+
+        <TextView
+            android:id="@+id/price_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/pad"
+            android:text="@string/price_display"
             android:textColor="@color/black"
             android:textSize="@dimen/text" />
 
         <Button
-            android:id="@+id/increment_button"
-            android:layout_width="@dimen/but_size"
-            android:layout_height="@dimen/but_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/pad"
-            android:onClick="increment"
-            android:text="@string/add" />
+            android:background="@color/buttonAlmond"
+            android:onClick="submitOrder"
+            android:text="@string/order" />
 
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/pad"
-        android:text="@string/price"
-        android:textAllCaps="true"
-        android:textSize="@dimen/text" />
-
-    <TextView
-        android:id="@+id/price_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/pad"
-        android:text="@string/price_display"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/pad"
-        android:onClick="submitOrder"
-        android:text="@string/order" />
-
-</LinearLayout>
+</FrameLayout>
