--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
             android:textSize="@dimen/text" />
 
         <TextView
-            android:id="@+id/price_text_view"
+            android:id="@+id/order_summary_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/pad"
