--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#4E2E28</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#C48E48</color>
     <color name="black">#000000</color>
     <color name="chocolate">#4E2E28</color>
     <color name="buttonAlmond">#C48E48</color>
