--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,11 @@
             android:textColor="@color/chocolate"/>
 
         <CheckBox
+            android:id="@+id/whip_check_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/check"
+            android:onClick="whipCheck"
             android:text="@string/whip_top"/>
 
         <TextView
