--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?><!-- Image borrowed from https://www.theodysseyonline.com/coffee-day-keeps-doctor-away -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:background="@drawable/coffee_image"
     tools:context=".MainActivity">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/image"
-        android:scaleType="centerCrop"
-        android:src="@drawable/coffee_image" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -35,6 +26,7 @@
                 android:id="@+id/whip_check_box"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="@dimen/check"
                 android:paddingLeft="@dimen/check"
                 android:text="@string/whip_top" />
 
@@ -111,5 +103,4 @@
 
 
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+</ScrollView>
