--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,14 @@
                 android:paddingLeft="@dimen/check"
                 android:text="@string/whip_top" />
 
+            <CheckBox
+                android:id="@+id/choc_check_box"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/check"
+                android:paddingLeft="@dimen/check"
+                android:text="@string/choc_top" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
