--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,111 +4,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fillViewport="true"
     android:background="@drawable/coffee_image"
+    android:fillViewport="true"
     tools:context=".MainActivity">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/name_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:hint="@string/input"
+            android:inputType="textCapWords"
+            android:padding="@dimen/pad2"
+            android:textColor="@color/chocolate" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/pad"
-                android:text="@string/topping"
-                android:textAllCaps="true"
-                android:textColor="@color/chocolate"
-                android:textSize="@dimen/text" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/pad"
+            android:text="@string/topping"
+            android:textAllCaps="true"
+            android:textColor="@color/chocolate"
+            android:textSize="@dimen/text" />
 
-            <CheckBox
-                android:id="@+id/whip_check_box"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/check"
-                android:paddingLeft="@dimen/check"
-                android:text="@string/whip_top" />
+        <CheckBox
+            android:id="@+id/whip_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/check"
+            android:paddingStart="@dimen/check"
+            android:text="@string/whip_top" />
 
-            <CheckBox
-                android:id="@+id/choc_check_box"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/check"
-                android:paddingLeft="@dimen/check"
-                android:text="@string/choc_top" />
+        <CheckBox
+            android:id="@+id/choc_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/check"
+            android:paddingStart="@dimen/check"
+            android:text="@string/choc_top" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/pad"
-                android:paddingTop="@dimen/pad2"
-                android:text="@string/quan"
-                android:textAllCaps="true"
-                android:textColor="@color/chocolate"
-                android:textSize="@dimen/text" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/pad"
+            android:paddingTop="@dimen/pad2"
+            android:text="@string/quan"
+            android:textAllCaps="true"
+            android:textColor="@color/chocolate"
+            android:textSize="@dimen/text" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/decrement_button"
-                    android:layout_width="@dimen/but_size"
-                    android:layout_height="@dimen/but_size"
-                    android:layout_margin="@dimen/pad"
-                    android:background="@color/buttonAlmond"
-                    android:onClick="decrement"
-                    android:text="@string/sub"
-                    android:textSize="@dimen/text" />
-
-                <TextView
-                    android:id="@+id/quantity_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/pad"
-                    android:text="@string/quan_display"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/text" />
-
-                <Button
-                    android:id="@+id/increment_button"
-                    android:layout_width="@dimen/but_size"
-                    android:layout_height="@dimen/but_size"
-                    android:layout_margin="@dimen/pad"
-                    android:background="@color/buttonAlmond"
-                    android:onClick="increment"
-                    android:text="@string/add"
-                    android:textSize="@dimen/text" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/pad"
-                android:text="@string/price"
-                android:textAllCaps="true"
-                android:textColor="@color/chocolate"
+            <Button
+                android:id="@+id/decrement_button"
+                android:layout_width="@dimen/but_size"
+                android:layout_height="@dimen/but_size"
+                android:layout_margin="@dimen/pad"
+                android:background="@color/buttonAlmond"
+                android:onClick="decrement"
+                android:text="@string/sub"
                 android:textSize="@dimen/text" />
 
             <TextView
-                android:id="@+id/order_summary_text_view"
+                android:id="@+id/quantity_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/pad"
-                android:text="@string/price_display"
+                android:layout_marginTop="@dimen/pad"
+                android:text="@string/quan_display"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/increment_button"
+                android:layout_width="@dimen/but_size"
+                android:layout_height="@dimen/but_size"
                 android:layout_margin="@dimen/pad"
                 android:background="@color/buttonAlmond"
-                android:onClick="submitOrder"
-                android:text="@string/order" />
-
+                android:onClick="increment"
+                android:text="@string/add"
+                android:textSize="@dimen/text" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/pad"
+            android:text="@string/price"
+            android:textAllCaps="true"
+            android:textColor="@color/chocolate"
+            android:textSize="@dimen/text" />
+
+        <TextView
+            android:id="@+id/order_summary_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/pad"
+            android:text="@string/price_display"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/pad"
+            android:background="@color/buttonAlmond"
+            android:onClick="submitOrder"
+            android:text="@string/order" />
+
+
+    </LinearLayout>
 </ScrollView>
