--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#795548</color>
     <color name="colorPrimaryDark">#4E2E28</color>
     <color name="colorAccent">#C48E48</color>
     <color name="black">#000000</color>
