Add content description to image and string resources.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,7 @@
             android:text="@string/order" />
 
         <ImageView
+            android:contentDescription="@string/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
