Create global constant variables for keys to use in save and restore stste methods. Remove unneeded TextView casting variable from display method.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
                 android:id="@+id/quantity_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:freezesText="true"
                 android:layout_marginTop="@dimen/pad"
                 android:text="@string/quan_display"
                 android:textColor="@color/black"
