--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,24 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/pad</item>
+        <item name="android:textSize">@dimen/text</item>
+    </style>
+
+    <style name="CheckboxStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">@dimen/check</item>
+    </style>
+
+    <style name="ButtonStyle">
+        <item name="android:layout_width">@dimen/but_size</item>
+        <item name="android:layout_height">@dimen/but_size</item>
+        <item name="android:layout_margin">@dimen/pad</item>
+        <item name="android:background">@drawable/button_capsule</item>
+    </style>
+
 </resources>
