Created new TextView for orderSummary to display in app. Updated comments.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,5 +91,13 @@
             android:scaleType="centerInside"
             android:src="@drawable/justjavaimg"/>
 
+        <TextView
+            android:id="@+id/displayMessage"
+            style="@style/TextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:gravity="center"
+            />
     </LinearLayout>
 </ScrollView>
